@@ -20,17 +20,21 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 
 
 #include <QString>
+#include <QMutex>
 #include "qspeedtest.h"
 const QString PROGRAMCOMPANY = "Binary Notion";
 const QString PROGRAMAUTHOR = "parsifal";
 const QString PROGRAMNAME = "QSpeedTest";
-const QString PROGRAMVERSION = "r6";
+const QString PROGRAMVERSION = "r7";
 const QString PROGRAMURL = "http://qspeedtest.sourceforge.net/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest/";
 const QString TARGETLISTURL = "http://qspeedtest.sourceforge.net/updates/QSpeedTest.ini";
 const QString TARGETLISTVERSIONURL = "http://qspeedtest.sourceforge.net/updates/QSpeedTest.ini.version";
 const int PINGTIMEOUT = 2000;
+const int DOWNLOADTESTSECS = 20;
 int PINGSPERTARGET = 4;
+QMutex MUTEX;
+qint64 BYTESDOWNLOADED;
 bool STOPBENCHMARK = false;
 
 
